# cpp_patterns

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md
examples/: CMakeLists.txt
examples/simple/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/include/: fswatch.hpp  stopTimer.hpp
src/state/: CMakeLists.txt  context.hpp  contextConcrete.cpp  contextConcrete.hpp  main.cpp  state.hpp  stateConcreteOne.cpp  stateConcreteOne.hpp  stateConcreteTwo.cpp  stateConcreteTwo.hpp
test/: CMakeLists.txt
test/test_doctest/: main.cpp
